fix mobile overflow-x bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,10 @@ html.dark {
   --line-color: rgba(255, 255, 255, 0.09);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .borderBlack {
   @apply border border-black/10;
 }
